modal__container&killer:justify+align,modal:fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+    display: flex;
     position: relative;
     margin: 0;
     font-family: Raleway, sans-serif;
@@ -27,9 +28,6 @@ body {
     width: 100vw;
 }
 
-.fixed {
-}
-
 #init-button {
     position: fixed;
     top: 20px;
@@ -42,10 +40,21 @@ body {
     border-radius: 5px;
 }
 
-#modal__container {
+#hider {
     display: flex;
     position: fixed;
     padding: auto;
+    width: 100vw;
+    height: 100vh;
+}
+
+#modal__container, #killer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    padding: auto;
+    /* margin: auto; */
     width: 100vw;
     height: 100vh;
 }
@@ -56,7 +65,20 @@ body {
     transition: left .7s;
 }
 
+.hider--hidden {
+    top: 0;
+    left: -1600px;
+    transition: left .7s;
+}
+
 .modal__container--visible {
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    transition: left .3s;
+}
+
+.hider--visible {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .7);
@@ -64,8 +86,9 @@ body {
 }
 
 #modal {
+    position: fixed;
     width: 100%;
-    margin: auto;
+    /* margin: auto; */
     padding: 0;
     background-color: rgb(175, 250, 227);
 }
